Handed cases where a building isn't set for a section. On calendar results - don't jump forward in time by 2 weeks (holiday jump) if the results contain an exam meeting type. Removed styling highlight for the current day of the week. Fixed a bug where the export button was still active after clearing the filters / events.

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5,6 +5,7 @@ classplan-root {
     padding: 8px 16px;
 
     img {
+      padding-right: 16px;
       height: 100%;
       width: auto;
       float: right;
