--- a/src/app/components/calendar/calendar.component.scss
+++ b/src/app/components/calendar/calendar.component.scss
@@ -1,6 +1,12 @@
 classplan-calendar {
   div.ou-calendar {
     margin: 32px;
+
+    full-calendar {
+      td.fc-today {
+        background: unset;
+      }
+    }
   }
 
   div.tippy-tooltip {
